# camera-comfyUI

./: Makefile  README.md  __init__.py  complex_nodes.py  flux_fisheye_filling_nodes.py  install.sh  metric_depth_nodes.py  pointcloud_nodes.py  pyproject.toml  reprojection_nodes.py  requirements.txt  video_nodes.py
.github/workflows/: publish.yml
comfy/custom_nodes/: pointcloud_nodes.py  reprojection_nodes.py  websocket_image_save.py
comfy/custom_nodes/workflows/: PointCloud.json  outpainting_fisheye.json  outpainting_fisheye_kitchen.json
conmfyui/custom_nodes/: README.md  node_typing.py  nodes.py  reprojector_utils.py
demo_images/: ComfyUITrajectory.npy
workflows/: Fisheye_depth_workflow.json  Outpaint_fisheye180.json  Outpaint_node_test.json  PC_enricher.json  PointCloud.json  Pointcloud walker.json  Pointcloud_enricher.json  Test pointcloud_loading.json  __init__.py  demo_camera_workflow.json  fisheye_to_pointcloud.json  outpainting_fisheye_flux.json  pointcloud_inpaint.json  sbs180_workflow.json  video_camera.json  wan_vace_ref_to_video.json
